argocd/neo4j-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
  namespace: torcal-ml
spec:
  selector:
    matchLabels:
      app: neo4j
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
      - name: neo4j
        image: neo4j:5.15
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 7474
          name: http
        - containerPort: 7687
          name: bolt
        volumeMounts:
        - name: neo4j-data
          mountPath: /data
          subPath: data-dir  # Añadir subPath
        - name: neo4j-logs
          mountPath: /logs
          subPath: logs-dir  # Añadir subPath
        - name: neo4j-import
          mountPath: /var/lib/neo4j/import
          subPath: import-dir  # Añadir subPath
        - name: neo4j-plugins
          mountPath: /plugins
          subPath: plugins-dir
      volumes:
      - name: neo4j-data
        persistentVolumeClaim:
          claimName: neo4j-data-pvc
      - name: neo4j-logs
        persistentVolumeClaim:
          claimName: neo4j-logs-pvc
      - name: neo4j-import
        persistentVolumeClaim:
          claimName: neo4j-import-pvc
      - name: neo4j-plugins
        persistentVolumeClaim:
          claimName: neo4j-plugins-pvc
