argocd/torcal-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torcal-ml
  namespace: torcal-ml
spec:
  selector:
    matchLabels:
      app: torcal-ml
  replicas: 2
  template:
    metadata:
      labels:
        app: torcal-ml
    spec:
      containers:
      - name: torcal-ml
        image: europe-southwest1-docker.pkg.dev/despliegue-458304/torcal-ml/torcal-ml-localhost@sha256:750d97739d538e6cfecdc26ad5a69483ee167bdfed1b7e5def5bd424fc763e9f
        resources:
          limits:
            memory: "6Gi"
            cpu: "4000m"
          requests:
            memory: "4Gi"
            cpu: "2000m"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
