argocd/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: torcal-ml
spec:
  selector:
    app: neo4j
  ports:
  - port: 7474
    targetPort: 7474
    name: http
  - port: 7687
    targetPort: 7687
    name: bolt
  type: ClusterIP
