argocd/torcal-ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torcal-ml
  namespace: torcal-ml
spec:
  selector:
    app: torcal-ml
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
