argocd/torcal-ml-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torcal-ml-ingress
  namespace: torcal-ml
  annotations:
    kubernetes.io/ingress.class: "gce"  # Para GKE
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: torcal-ml
            port:
              number: 80
